--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,9 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Rodrigo Amorín</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>Rodrigo Amorín</h1>
 	</body>
 </html>
